tests/miniJava/neg/000161_mutation.MiniJava
class java { public static false void Main ( String [ ] java ) { { } } }
